# socket.io-poco

./: .gitignore  CMakeLists.txt  README.mdown  socket.io-poco.sln
TestClient/: ReadMe.txt  TestClient.cpp  TestClient.h  TestClient.vcxproj  TestClient.vcxproj.filters  TestTarget.cpp  TestTarget.h  main.cpp  stdafx.cpp
android/Foundation/: Android.mk
android/JSON/: Android.mk
android/Net/: Android.mk
examples/: CMakeLists.txt
examples/TestClient/: TestClient.vcxproj  TestClient.vcxproj.filters  TestEndpointTarget.cpp  TestEndpointTarget.h  TestTarget.cpp  TestTarget.h  main.cpp
include/: SIOClient.h  SIOClientImpl.h  SIOClientRegistry.h  SIOEventTarget.h  SIOPacket.h
socket.io-poco/: Android.mk  CMakeLists.txt  ReadMe.txt  SIOClient.cpp  SIOClient.h  SIOClientImpl.cpp  SIOClientImpl.h  SIOClientRegistry.cpp  SIOClientRegistry.h  SIOEventCallback.h  SIOEventRegistry.cpp  SIOEventRegistry.h  SIOEventTarget.cpp  SIOEventTarget.h  SIONotificationHandler.cpp  SIONotificationHandler.h  SIONotifications.h  socket.io-poco.cpp  socket.io-poco.vcxproj  socket.io-poco.vcxproj.filters  socketiopoco.gyp  stdafx.cpp
socket.io-poco/include/: SIOClient.h  SIOClientImpl.h  SIOClientRegistry.h  SIOEventRegistry.h  SIOEventTarget.h  SIONotificationHandler.h  SIONotifications.h  SIOPacket.h
socket.io-poco/src/: CMakeLists.txt  SIOClient.cpp  SIOClientImpl.cpp  SIOClientRegistry.cpp  SIOEventRegistry.cpp  SIONotificationHandler.cpp  SIOPacket.cpp
socket.io-poco/test/: TestEndpointTarget.cpp  TestTarget.cpp  TestTarget.h  main.cpp
src/: CMakeLists.txt  SIOClient.cpp  SIOClientImpl.cpp  SIOEventRegistry.cpp  SIOPacket.cpp
src/examples/: CMakeLists.txt  TestEndpointTarget.cpp  TestEndpointTarget.h  TestTarget.cpp  TestTarget.h  main.cpp  package.json  server.js
tools/jsb/bindings-config/: socketio.ini
